# wagtail-exact-crop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/wagtail_exact_crop/: README.md  apps.py  checks.py  models.py  wagtail_hooks.py
src/wagtail_exact_crop/static/exactcrop/: main.js  styles.css
src/wagtail_exact_crop/templates/exactcrop/: crop_widgets.html  edit.html  index.html  index_focal_point.html
src/wagtail_exact_crop/templates/wagtailimages/images/: edit.html
src/wagtail_exact_crop/templatetags/: exactcrop_tags.py
tests/: conftest.py  test_checks.py  test_image_operation.py  test_models_and_admin.py  test_staticfiles.py  test_template_tags.py
tests/test_project/: bad_image_settings.py  manage.py  settings.py  urls.py
tests/test_project/demo_app/: apps.py  views.py
tests/test_project/demo_app/templates/demo_app/: base.html  exact_crop.html  focal_point.html
tests/test_project/images/: apps.py  models.py
tests/test_project/images/migrations/: 0001_initial.py
